more options, better defaults, misc

--- a/ankiweb.html
+++ b/ankiweb.html
@@ -2,26 +2,30 @@ This add-on allows you to quickly set a font color, the background color or a a 
 
 The latest version of this add-on and this description only refers to Anki 2.1. An old version for 2.0 is still available under this ID since I can't remove the old version. I have stopped using Anki 2.0 so there's no support. Don't download this add-on for 2.0.
 
-The configuration of this add-on was changed with the release 0.3 from July 2019. Now you can use a configuration menu. This new version tries to read your old config.
+The configuration of this add-on was changed with the release 0.3 from July 2019. Now you can use a configuration menu. This new version tries to read your old config. This new version also brings better defaults.
 
-This add-on reuses the main function from <a href="https://ankiweb.net/shared/info/1215991469" rel="nofollow">Customize Editor Stylesheet</a> so that you can use classes for styling and see the styling in the editor without any additional setup. Prior versions of this add-on just linked to this add-on but this resulted in multiple bug reports. Thanks @Glutanimate for making this option available.
+If you want to use a custom style but don't know css there are online sites that make creating styles easier. A google search lead to sites like [this one](https://html-css-js.com/css/generator/font/) or [this one](https://webdesign-assistant.com/font-editor/css-font-generator.php).
 
-<b># bugs etc. </b>
+<b># Incompatible addons</b>
+<a href="https://ankiweb.net/shared/info/1215991469" rel="nofollow">Customize Editor Stylesheet</a> because my add-on reuses its main function so that you can use classes for styling and see the styling in the editor without any additional setup. Prior versions of my add-on just linked to this add-on. This resulted in multiple bug reports. Thanks @Glutanimate for making this option available.
+
+<b># bugs etc.</b>
 If you find a bug or have improvements please post them on <a href="https://github.com/ijgnd/anki__quick_highlight_fontcolor_background" rel="nofollow">github</a>. As always: Use it at your own risk.
 
-<img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v2_main.png"> 
+<img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v3_main.png"> 
 
-<img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v2_context_menu.png"> 
+<img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v3_context.png"> 
 
+<img src="https://raw.githubusercontent.com/ijgnd/anki__editor__apply__font_color__background_color__custom_class__custom_style/master/screenshots/screenshot_v3_config.png">
+
+<b># Alternatives</b>
 If you just want to sometimes change the text color or background color this add-on might be overkill. Or maybe you find the config too complicated. Or maybe you run into an error with this add-on. Then you could have a look at these options:
 - The option to change the background color is available in the <a href="https://ankiweb.net/shared/info/295889520" rel="nofollow">Mini Format Pack</a>. But switching between different colors is time consuming.
 - Anki has a function to change the font color. But switching between different colors is time consuming.
 - There's the add-on <a href="https://ankiweb.net/shared/info/2491935955" rel="nofollow">Quick Colour Changing</a> that allows to set shortcuts for different font colors.
 
-
-<b># applying different font size </b>
+<b># applying different font size</b>
 You could use a class and put "font-size:30px;" into the field "styling of class".
-
 
 <b># Versions </b>
 - 2019-      v0.3   new configuration dialog
