--- a/ankiweb.html
+++ b/ankiweb.html
@@ -36,6 +36,9 @@ styling with a class doesn't work if the text selected spans different tags. Thi
 <b># known limitations</b>
 In some cases an underlying component of Anki  (the js command inserthtml from chromium) changes from inline to css styling and vice versa. As long as you don't change your css or rely on different styling for night mdoe you should't notice this ... The only solution seems to use a different command.
 
+<b># remove the styling</b>
+If the regular way to clear formatting doesn't work try the add-on <a href="https://ankiweb.net/shared/info/333221628" rel="nofollow">editor - remove more formatting for selection (headings, hyperlinks, ...)</a> which adds an option "Full Clear" to the context menu of the editor.
+
 <b># updating the styling on AnkiMobile</b>
 Changes to your config are only applied in AnkiMobile on my iphone after I force close and reopen Ankimobile. With "force close" I mean: double click the home button, then swipe up on the app's preview.
 
